@@ -2,8 +2,9 @@
 
 == 0.7.1
 
-* Fixed a bug with EOF errors in net/http.  [#17570]
 * Added iPhone to the user agent aliases. [#17572]
+* Fixed a bug with EOF errors in net/http.  [#17570]
+* Handling 0 length gzipped responses. [#17471]
 
 == 0.7.0
 
